# PoetryTeste

./: README.md  pyproject.toml
